--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta
       name="description"
       content="The website of the Little Lemon Restaurant, a family run 
-      Mediterranean restaurant located in Chicago, Illinois. Please come 
+      Mediterranean restaurant located in Newyork, Illinois. Please come 
       and enjoy our wide selection of authentic Mediterranean cuisine!" />
     <meta name="author" content="Adam Mourade" />
     <meta name="theme-color" content="#FFFFFF" />
@@ -24,7 +24,7 @@
       property="og:description"
       content="
     The website of the Little Lemon Restaurant, a family run 
-      Mediterranean restaurant located in Chicago, Illinois. Please come 
+      Mediterranean restaurant located in Newyork, Illinois. Please come 
       and enjoy our wide selection of authentic Mediterranean cuisine!" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:country-name" content="USA" />
